# twmu-aws-ai-agent-global-hackathon-2025

./: .dockerignore.a2a  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.a2a  Dockerfile.a2a-agent  NOTICE  README.md  RECORDING_CHECKLIST.md  SECURITY.md  SETUP.md  VIDEO_SCRIPT.md  pyproject.toml  pytest.ini  requirements-a2a.txt  requirements.txt
.github/workflows/: test.yml
cdk_infra/: app.py  cdk.json
cdk_infra/cdk_infra/: __init__.py  calendar_service_stack.py  cognito_stack.py  config_stack.py  knowledge_base_stack.py  payment_bucket_stack.py  whatsapp_stack.py
config/: google_calendar_openapi.json
data/restaurant/: allergens.json  hours.json  menu.json
devpost-gallery/: prepare_gallery.sh  recreate_gallery.sh
docs/: A2A_ARCHITECTURE.md  A2A_REFERENCES.md  CLAUDE_DESKTOP_SETUP.md  README.md  architecture.drawio
docs/architecture/: ADR-003-SSM-Parameter-Store.md  ADR-004-AP2-Payment-A2A-Only.md  ADR-005-Human-In-Loop-Payment-Approval.md  CDK_AGENTCORE_DESIGN.md  MEMORY_ARCHITECTURE.md  diagrams.md  overview.md  system-architecture.md
docs/diagrams/: system-architecture.yaml
docs/functional-testing/: functional-testing.md
docs/guides/: A2A_DEPLOYMENT_GUIDE.md  A2A_SETUP.md  DEPLOYMENT.md  GOOGLE_CALENDAR_SERVICE_ACCOUNT.md  MEMORY_DEPLOYMENT.md  WHATSAPP_SETUP.md  WHATSAPP_TESTING.md  getting-started.md  troubleshooting.md
docs/reference/: environment-variables.md  scripts.md
docs/troubleshooting/: A2A_BOOKING_HALLUCINATION_FIX.md  SESSION_RESET.md
examples/: README.md  REAL_WORLD_DEMO.md  a2a_orchestrator_demo.py  a2a_orchestrator_scenario.md  run_orchestrator_demo.py  test_real_world_demo.py
lambda/: invoker.py  whatsapp_orchestrator.py
mcp_server/: DOCKER_DEMO.md  Dockerfile  ORCHESTRATOR_DEMO.md  README.md  a2a_orchestrator_mcp.py  a2a_orchestrator_mcp_old.py  docker-compose.yml  restaurant_agent_mcp.py  test_mcp.py
scripts/: README.md  add_calendar_target.py  cleanup.sh  cleanup_gateway.py  complete_oauth_flow.py  create_memory.py  deploy-kb.sh  deploy.sh  deploy_kb_boto3.py  diagnose_whatsapp.sh  export_cdk_outputs.sh  fetch_agent_card.py  fix_duplicate_bookings.sh  generate-diagrams.sh  generate_diagrams.py  get_cognito_token.sh  get_refresh_token_direct.sh  init-dev-env.sh  initiate_oauth.py  list_memories.py  mcp-a2a-wrapper.sh  preview_agent_card.py  reset-sessions.sh  setup-mcp-for-q.sh  setup_gateway.py  setup_service_account.sh  test-a2a-local.sh  test-a2a-payment.sh  test-a2a.sh  test-mcp-a2a.sh  test-mcp-direct.sh  test-phase1.sh  test.sh  test_gateway_booking.py  test_memory.py  test_memory_integration.py  test_refresh_token.py  update-claude-config.sh  update_calendar_target_lambda.py  update_gateway_to_lambda.py
src/agents/: agentcore_a2a_server.py  agentcore_mcp_agent.py  requirements-a2a.txt  requirements.txt
src/config/: business_hours.py  runtime_config.py
tests/: CALENDAR_TEST_GUIDE.md  README.md  conftest.py  test_calendar_features.py  test_calendar_features.sh  test_duplicate_booking_fix.py  test_payment_integration.py  test_payment_tool.py
tests/e2e/: PHASE2_E2E_TEST.md  test_agentcore_runtime.py  test_booking_flow.py  test_calendar_tools.py  test_e2e_memory.py  test_phase2_availability.py.disabled  test_phase2_availability.sh
tests/integration/: test_a2a_endpoints.py
tests/step_defs/: agentcore_steps.py  cdk_integration_steps.py  (+2 more)
(+16 files in other folders)
